Changes made on 1:00 PM at 02-09-2023

--- a/src/Components/Navbar/style.css
+++ b/src/Components/Navbar/style.css
@@ -42,9 +42,18 @@ ul{
     display: flex;
 }
 
-li{
+ul li{
     list-style: none;
     cursor: pointer;
+}
+
+ul li a{
+    text-decoration: none;
+    color: white;
+}
+
+ul li a:hover{
+    color: yellow;
 }
 
 .search{
